# fastware

./: .gitignore  CMakeLists.txt  README.md
3rd/SDL2/: CMakeLists.txt
3rd/SDL2/src/joystick/: SDL_gamecontroller.c
3rd/freetype/builds/unix/: ftsystem.c
TowerDefenceGame/: CMakeLists.txt  game_setup.cpp  game_setup.h  geometry.cpp  geometry.h  main.cpp
TowerDefenceGame/shaders/: basic.frag  basic2.frag  basic2.vert  bounding_box.vert
TowerDefenceGame/window/: window.cpp  window.h  window_system.cpp  window_system.h
colliders/: CMakeLists.txt
colliders/include/fastware/: aabb_store.h  colliders.h
colliders/src/: aabb_store.cpp  colliders.cpp
common/: CMakeLists.txt
common/include/fastware/: clock.h  fastware_def.h  file.h  hash.h  math.h  maths.h  types.h
common/src/: clock.cpp  file.cpp  types.cpp
game_app/: CMakeLists.txt  game_setup.cpp  game_setup.h  geometry.h  main.cpp
game_app/shaders/: basic2.frag  bounding_box.frag  text.frag  text.vert
logger/: CMakeLists.txt
logger/include/fastware/: logger.h
logger/src/: logger.cpp
memory/: CMakeLists.txt
memory/include/: memory.h
memory/include/fastware/: memory.h
memory/perf/: CMakeLists.txt  perf.cpp  pool_alloc.h  stack_alloc.h  system_malloc.h
memory/src/: memory.cpp
memory/unit/: CMakeLists.txt  pool_alloc.h  stack_alloc.h  unit.cpp
renderer/: CMakeLists.txt
renderer/include/fastware/: bounding.h  camera.h  data_types.h  debug.h  entity.h  image_source.h  renderer.h  renderer_state.h  text.h  utils.h
renderer/src/: bounding.cpp  camera.cpp  data_types.cpp  debug.cpp  entity.cpp  image_source.cpp  renderer.cpp  renderer_state.cpp  text.cpp  utils.cpp
utils/: CMakeLists.txt
utils/include/fastware/: stopwatch.h
utils/src/: stopwatch.cpp
window/: CMakeLists.txt
window/include/fastware/: window.h  window_events.h  window_system.h
window/src/: window.cpp  window_events.cpp  window_system.cpp
